// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`test SQLRenderer render empty content 1`] = `
<div>
  <div
    class="actiontech-sql-renderer-wrapper css-dz7fl9"
  >
    <span
      class="empty-sql-placeholder"
    >
      -
    </span>
  </div>
</div>
`;

exports[`test SQLRenderer render empty content 2`] = `
<div>
  <div
    class="actiontech-sql-renderer-wrapper css-dz7fl9"
  >
    <span
      class="empty-sql-placeholder"
    >
      empty
    </span>
  </div>
</div>
`;

exports[`test SQLRenderer render showCopyIcon is equal always 1`] = `
<div>
  <div
    class="actiontech-sql-renderer-wrapper css-dz7fl9"
  >
    <pre>
      <code>
        <div
          class="code-line"
        >
          <span
            class="hljs-keyword"
          >
            CREATE
          </span>
           
          <span
            class="hljs-keyword"
          >
            TABLE
          </span>
           IF 
          <span
            class="hljs-keyword"
          >
            NOT
          </span>
           
          <span
            class="hljs-keyword"
          >
            EXISTS
          </span>
        </div>
        <div
          class="code-line"
        >
              task (
        </div>
        <div
          class="code-line"
        >
                id 
          <span
            class="hljs-type"
          >
            BIGINT
          </span>
           UNSIGNED AUTO_INCREMENT 
          <span
            class="hljs-keyword"
          >
            PRIMARY
          </span>
           KEY,
        </div>
        <div
          class="code-line"
        >
                title 
          <span
            class="hljs-type"
          >
            VARCHAR
          </span>
          (
          <span
            class="hljs-number"
          >
            255
          </span>
          ) 
          <span
            class="hljs-keyword"
          >
            NOT
          </span>
           
          <span
            class="hljs-keyword"
          >
            NULL
          </span>
           
          <span
            class="hljs-keyword"
          >
            DEFAULT
          </span>
           
          <span
            class="hljs-string"
          >
            ''
          </span>
          ,
        </div>
        <div
          class="code-line"
        >
                description TEXT,
        </div>
        <div
          class="code-line"
        >
                status ENUM(
          <span
            class="hljs-string"
          >
            'pending'
          </span>
          , 
          <span
            class="hljs-string"
          >
            'completed'
          </span>
          ) 
          <span
            class="hljs-keyword"
          >
            NOT
          </span>
           
          <span
            class="hljs-keyword"
          >
            NULL
          </span>
           
          <span
            class="hljs-keyword"
          >
            DEFAULT
          </span>
           
          <span
            class="hljs-string"
          >
            'pending'
          </span>
          ,
        </div>
        <div
          class="code-line"
        >
                created_at 
          <span
            class="hljs-type"
          >
            TIMESTAMP
          </span>
           
          <span
            class="hljs-keyword"
          >
            DEFAULT
          </span>
           
          <span
            class="hljs-built_in"
          >
            CURRENT_TIMESTAMP
          </span>
          ,
        </div>
        <div
          class="code-line"
        >
                updated_at 
          <span
            class="hljs-type"
          >
            TIMESTAMP
          </span>
           
          <span
            class="hljs-keyword"
          >
            DEFAULT
          </span>
           
          <span
            class="hljs-built_in"
          >
            CURRENT_TIMESTAMP
          </span>
           
          <span
            class="hljs-keyword"
          >
            ON
          </span>
           
          <span
            class="hljs-keyword"
          >
            UPDATE
          </span>
           
          <span
            class="hljs-built_in"
          >
            CURRENT_TIMESTAMP
          </span>
        </div>
        <div
          class="code-line"
        >
              );
        </div>
      </code>
    </pre>
    <div
      class="actiontech-copy-icon actiontech-sql-renderer-copy-icon css-1s8kb8e"
    >
      <span
        aria-label="copy"
        class="anticon anticon-copy"
        role="img"
      >
        <svg
          aria-hidden="true"
          data-icon="copy"
          fill="currentColor"
          focusable="false"
          height="1em"
          viewBox="64 64 896 896"
          width="1em"
        >
          <path
            d="M832 64H296c-4.4 0-8 3.6-8 8v56c0 4.4 3.6 8 8 8h496v688c0 4.4 3.6 8 8 8h56c4.4 0 8-3.6 8-8V96c0-17.7-14.3-32-32-32zM704 192H192c-17.7 0-32 14.3-32 32v530.7c0 8.5 3.4 16.6 9.4 22.6l173.3 173.3c2.2 2.2 4.7 4 7.4 5.5v1.9h4.2c3.5 1.3 7.2 2 11 2H704c17.7 0 32-14.3 32-32V224c0-17.7-14.3-32-32-32zM350 856.2L263.9 770H350v86.2zM664 888H414V746c0-22.1-17.9-40-40-40H232V264h432v624z"
          />
        </svg>
      </span>
    </div>
  </div>
</div>
`;

exports[`test SQLRenderer render snap when highlightSyntax is equal false 1`] = `
<div>
  <div
    class="actiontech-sql-renderer-wrapper css-dz7fl9"
  >
    <pre>
      <code>
        <div
          class="code-line"
        >
          CREATE TABLE IF NOT EXISTS
        </div>
        <div
          class="code-line"
        >
              task (
        </div>
        <div
          class="code-line"
        >
                id BIGINT UNSIGNED AUTO_INCREMENT PRIMARY KEY,
        </div>
        <div
          class="code-line"
        >
                title VARCHAR(255) NOT NULL DEFAULT '',
        </div>
        <div
          class="code-line"
        >
                description TEXT,
        </div>
        <div
          class="code-line"
        >
                status ENUM('pending', 'completed') NOT NULL DEFAULT 'pending',
        </div>
        <div
          class="code-line"
        >
                created_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP,
        </div>
        <div
          class="code-line"
        >
                updated_at TIMESTAMP DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
        </div>
        <div
          class="code-line"
        >
              );
        </div>
      </code>
    </pre>
  </div>
</div>
`;

exports[`test SQLRenderer render snap when loading is not undefined 1`] = `
<div>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="actiontech-sql-renderer-wrapper css-dz7fl9"
      >
        <pre>
          <code>
            <div
              class="code-line"
            >
              <span
                class="hljs-keyword"
              >
                CREATE
              </span>
               
              <span
                class="hljs-keyword"
              >
                TABLE
              </span>
               IF 
              <span
                class="hljs-keyword"
              >
                NOT
              </span>
               
              <span
                class="hljs-keyword"
              >
                EXISTS
              </span>
            </div>
            <div
              class="code-line"
            >
                  task (
            </div>
            <div
              class="code-line"
            >
                    id 
              <span
                class="hljs-type"
              >
                BIGINT
              </span>
               UNSIGNED AUTO_INCREMENT 
              <span
                class="hljs-keyword"
              >
                PRIMARY
              </span>
               KEY,
            </div>
            <div
              class="code-line"
            >
                    title 
              <span
                class="hljs-type"
              >
                VARCHAR
              </span>
              (
              <span
                class="hljs-number"
              >
                255
              </span>
              ) 
              <span
                class="hljs-keyword"
              >
                NOT
              </span>
               
              <span
                class="hljs-keyword"
              >
                NULL
              </span>
               
              <span
                class="hljs-keyword"
              >
                DEFAULT
              </span>
               
              <span
                class="hljs-string"
              >
                ''
              </span>
              ,
            </div>
            <div
              class="code-line"
            >
                    description TEXT,
            </div>
            <div
              class="code-line"
            >
                    status ENUM(
              <span
                class="hljs-string"
              >
                'pending'
              </span>
              , 
              <span
                class="hljs-string"
              >
                'completed'
              </span>
              ) 
              <span
                class="hljs-keyword"
              >
                NOT
              </span>
               
              <span
                class="hljs-keyword"
              >
                NULL
              </span>
               
              <span
                class="hljs-keyword"
              >
                DEFAULT
              </span>
               
              <span
                class="hljs-string"
              >
                'pending'
              </span>
              ,
            </div>
            <div
              class="code-line"
            >
                    created_at 
              <span
                class="hljs-type"
              >
                TIMESTAMP
              </span>
               
              <span
                class="hljs-keyword"
              >
                DEFAULT
              </span>
               
              <span
                class="hljs-built_in"
              >
                CURRENT_TIMESTAMP
              </span>
              ,
            </div>
            <div
              class="code-line"
            >
                    updated_at 
              <span
                class="hljs-type"
              >
                TIMESTAMP
              </span>
               
              <span
                class="hljs-keyword"
              >
                DEFAULT
              </span>
               
              <span
                class="hljs-built_in"
              >
                CURRENT_TIMESTAMP
              </span>
               
              <span
                class="hljs-keyword"
              >
                ON
              </span>
               
              <span
                class="hljs-keyword"
              >
                UPDATE
              </span>
               
              <span
                class="hljs-built_in"
              >
                CURRENT_TIMESTAMP
              </span>
            </div>
            <div
              class="code-line"
            >
                  );
            </div>
          </code>
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`test SQLRenderer render snap when loading is not undefined 2`] = `
<div>
  <div
    class="ant-spin-nested-loading css-dev-only-do-not-override-txh9fw"
  >
    <div
      class="ant-spin-container"
    >
      <div
        class="actiontech-sql-renderer-wrapper css-dz7fl9"
      >
        <pre>
          <code>
            <div
              class="code-line"
            >
              <span
                class="hljs-keyword"
              >
                CREATE
              </span>
               
              <span
                class="hljs-keyword"
              >
                TABLE
              </span>
               IF 
              <span
                class="hljs-keyword"
              >
                NOT
              </span>
               
              <span
                class="hljs-keyword"
              >
                EXISTS
              </span>
            </div>
            <div
              class="code-line"
            >
                  task (
            </div>
            <div
              class="code-line"
            >
                    id 
              <span
                class="hljs-type"
              >
                BIGINT
              </span>
               UNSIGNED AUTO_INCREMENT 
              <span
                class="hljs-keyword"
              >
                PRIMARY
              </span>
               KEY,
            </div>
            <div
              class="code-line"
            >
                    title 
              <span
                class="hljs-type"
              >
                VARCHAR
              </span>
              (
              <span
                class="hljs-number"
              >
                255
              </span>
              ) 
              <span
                class="hljs-keyword"
              >
                NOT
              </span>
               
              <span
                class="hljs-keyword"
              >
                NULL
              </span>
               
              <span
                class="hljs-keyword"
              >
                DEFAULT
              </span>
               
              <span
                class="hljs-string"
              >
                ''
              </span>
              ,
            </div>
            <div
              class="code-line"
            >
                    description TEXT,
            </div>
            <div
              class="code-line"
            >
                    status ENUM(
              <span
                class="hljs-string"
              >
                'pending'
              </span>
              , 
              <span
                class="hljs-string"
              >
                'completed'
              </span>
              ) 
              <span
                class="hljs-keyword"
              >
                NOT
              </span>
               
              <span
                class="hljs-keyword"
              >
                NULL
              </span>
               
              <span
                class="hljs-keyword"
              >
                DEFAULT
              </span>
               
              <span
                class="hljs-string"
              >
                'pending'
              </span>
              ,
            </div>
            <div
              class="code-line"
            >
                    created_at 
              <span
                class="hljs-type"
              >
                TIMESTAMP
              </span>
               
              <span
                class="hljs-keyword"
              >
                DEFAULT
              </span>
               
              <span
                class="hljs-built_in"
              >
                CURRENT_TIMESTAMP
              </span>
              ,
            </div>
            <div
              class="code-line"
            >
                    updated_at 
              <span
                class="hljs-type"
              >
                TIMESTAMP
              </span>
               
              <span
                class="hljs-keyword"
              >
                DEFAULT
              </span>
               
              <span
                class="hljs-built_in"
              >
                CURRENT_TIMESTAMP
              </span>
               
              <span
                class="hljs-keyword"
              >
                ON
              </span>
               
              <span
                class="hljs-keyword"
              >
                UPDATE
              </span>
               
              <span
                class="hljs-built_in"
              >
                CURRENT_TIMESTAMP
              </span>
            </div>
            <div
              class="code-line"
            >
                  );
            </div>
          </code>
        </pre>
      </div>
    </div>
  </div>
</div>
`;

exports[`test SQLRenderer render snap when preserveOriginalFormat is equal false 1`] = `
<div>
  <div
    class="actiontech-sql-renderer-wrapper css-dz7fl9"
  >
    <pre>
      <code>
        <span
          class="hljs-keyword"
        >
          CREATE
        </span>
         
        <span
          class="hljs-keyword"
        >
          TABLE
        </span>
         IF 
        <span
          class="hljs-keyword"
        >
          NOT
        </span>
         
        <span
          class="hljs-keyword"
        >
          EXISTS
        </span>
        
    task (
      id 
        <span
          class="hljs-type"
        >
          BIGINT
        </span>
         UNSIGNED AUTO_INCREMENT 
        <span
          class="hljs-keyword"
        >
          PRIMARY
        </span>
         KEY,
      title 
        <span
          class="hljs-type"
        >
          VARCHAR
        </span>
        (
        <span
          class="hljs-number"
        >
          255
        </span>
        ) 
        <span
          class="hljs-keyword"
        >
          NOT
        </span>
         
        <span
          class="hljs-keyword"
        >
          NULL
        </span>
         
        <span
          class="hljs-keyword"
        >
          DEFAULT
        </span>
         
        <span
          class="hljs-string"
        >
          ''
        </span>
        ,
      description TEXT,
      status ENUM(
        <span
          class="hljs-string"
        >
          'pending'
        </span>
        , 
        <span
          class="hljs-string"
        >
          'completed'
        </span>
        ) 
        <span
          class="hljs-keyword"
        >
          NOT
        </span>
         
        <span
          class="hljs-keyword"
        >
          NULL
        </span>
         
        <span
          class="hljs-keyword"
        >
          DEFAULT
        </span>
         
        <span
          class="hljs-string"
        >
          'pending'
        </span>
        ,
      created_at 
        <span
          class="hljs-type"
        >
          TIMESTAMP
        </span>
         
        <span
          class="hljs-keyword"
        >
          DEFAULT
        </span>
         
        <span
          class="hljs-built_in"
        >
          CURRENT_TIMESTAMP
        </span>
        ,
      updated_at 
        <span
          class="hljs-type"
        >
          TIMESTAMP
        </span>
         
        <span
          class="hljs-keyword"
        >
          DEFAULT
        </span>
         
        <span
          class="hljs-built_in"
        >
          CURRENT_TIMESTAMP
        </span>
         
        <span
          class="hljs-keyword"
        >
          ON
        </span>
         
        <span
          class="hljs-keyword"
        >
          UPDATE
        </span>
         
        <span
          class="hljs-built_in"
        >
          CURRENT_TIMESTAMP
        </span>
        
    );
      </code>
    </pre>
  </div>
</div>
`;

exports[`test SQLRenderer render snap when showLineNumbers is equal true 1`] = `
<div>
  <div
    class="actiontech-sql-renderer-wrapper css-dz7fl9"
  >
    <pre>
      <code>
        <div
          class="code-line"
        >
          <span
            class="code-line-number"
          >
            1
          </span>
          <span
            class="hljs-keyword"
          >
            CREATE
          </span>
           
          <span
            class="hljs-keyword"
          >
            TABLE
          </span>
           IF 
          <span
            class="hljs-keyword"
          >
            NOT
          </span>
           
          <span
            class="hljs-keyword"
          >
            EXISTS
          </span>
        </div>
        <div
          class="code-line"
        >
          <span
            class="code-line-number"
          >
            2
          </span>
              task (
        </div>
        <div
          class="code-line"
        >
          <span
            class="code-line-number"
          >
            3
          </span>
                id 
          <span
            class="hljs-type"
          >
            BIGINT
          </span>
           UNSIGNED AUTO_INCREMENT 
          <span
            class="hljs-keyword"
          >
            PRIMARY
          </span>
           KEY,
        </div>
        <div
          class="code-line"
        >
          <span
            class="code-line-number"
          >
            4
          </span>
                title 
          <span
            class="hljs-type"
          >
            VARCHAR
          </span>
          (
          <span
            class="hljs-number"
          >
            255
          </span>
          ) 
          <span
            class="hljs-keyword"
          >
            NOT
          </span>
           
          <span
            class="hljs-keyword"
          >
            NULL
          </span>
           
          <span
            class="hljs-keyword"
          >
            DEFAULT
          </span>
           
          <span
            class="hljs-string"
          >
            ''
          </span>
          ,
        </div>
        <div
          class="code-line"
        >
          <span
            class="code-line-number"
          >
            5
          </span>
                description TEXT,
        </div>
        <div
          class="code-line"
        >
          <span
            class="code-line-number"
          >
            6
          </span>
                status ENUM(
          <span
            class="hljs-string"
          >
            'pending'
          </span>
          , 
          <span
            class="hljs-string"
          >
            'completed'
          </span>
          ) 
          <span
            class="hljs-keyword"
          >
            NOT
          </span>
           
          <span
            class="hljs-keyword"
          >
            NULL
          </span>
           
          <span
            class="hljs-keyword"
          >
            DEFAULT
          </span>
           
          <span
            class="hljs-string"
          >
            'pending'
          </span>
          ,
        </div>
        <div
          class="code-line"
        >
          <span
            class="code-line-number"
          >
            7
          </span>
                created_at 
          <span
            class="hljs-type"
          >
            TIMESTAMP
          </span>
           
          <span
            class="hljs-keyword"
          >
            DEFAULT
          </span>
           
          <span
            class="hljs-built_in"
          >
            CURRENT_TIMESTAMP
          </span>
          ,
        </div>
        <div
          class="code-line"
        >
          <span
            class="code-line-number"
          >
            8
          </span>
                updated_at 
          <span
            class="hljs-type"
          >
            TIMESTAMP
          </span>
           
          <span
            class="hljs-keyword"
          >
            DEFAULT
          </span>
           
          <span
            class="hljs-built_in"
          >
            CURRENT_TIMESTAMP
          </span>
           
          <span
            class="hljs-keyword"
          >
            ON
          </span>
           
          <span
            class="hljs-keyword"
          >
            UPDATE
          </span>
           
          <span
            class="hljs-built_in"
          >
            CURRENT_TIMESTAMP
          </span>
        </div>
        <div
          class="code-line"
        >
          <span
            class="code-line-number"
          >
            9
          </span>
              );
        </div>
      </code>
    </pre>
  </div>
</div>
`;
